# router/router.go
@@ -26,6 +26,8 @@ func Init() *gin.Engine {
 	r.POST("login", service.Login())
 	r.POST("/send-code", service.SendCode())
 	r.POST("/register", service.Register())
+	// 排行榜
+	r.GET("/rank-list", service.GetRankList())
 
 	// 提交记录
 	r.GET("submit-list", service.GetSubmitList())
